# evolution-of-todo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: architect-prime.md  bot-intelligence.md  k8s-engineer.md  logic-specialist.md  ux-specialist.md
.claude/skills/skill-agentic-intent-parsing/: SKILL.md
.claude/skills/skill-cli-beautification/: SKILL.md
.claude/skills/skill-cloud-native-blueprints/: SKILL.md
.claude/skills/skill-data-lifecycle/: SKILL.md
.claude/skills/skill-validation-guardianship/: SKILL.md
.specify/memory/: constitution.md.tmp
history/prompts/001-core-todo-essentials/: 0001-create-core-todo-spec.spec.prompt.md  0002-implementation-planning-phase-1.plan.prompt.md  0003-generate-implementation-tasks.tasks.prompt.md  0004-implement-core-todo-essentials.green.prompt.md
history/prompts/001-task-organization/: 0001-task-organization-spec.spec.prompt.md  (+2 more)
specs/001-core-todo-essentials/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-due-dates-recurrence/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-task-organization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/todo/: controller.py  main.py
src/todo_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/contract/: test_task_organization_contracts.py
tests/integration/: test_task_organization_integration.py
tests/unit/: test_logic_us1.py  test_logic_us2.py  test_schemas.py  test_storage_filter.py  test_storage_search.py  test_storage_sort.py  test_task_model.py
(+25 files in other folders)
