[project]
name = "todo-app"
version = "0.1.0"
description = "CLI-based in-memory Todo application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "rich>=14.2.0",
]

[project.scripts]
todo = "todo.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
